...
                ) {
                    Text("Key", style = MaterialTheme.typography.titleSmall)
                    Divider(thickness = 2.dp, startIndent = 18.dp)
                }
                Spacer(Modifier.size(12.dp))
                StringInput(
                    value = viewModel.keyStoreInfoState.keyStoreAlisa, label = "密钥别名", isError = false
                ) { name ->
                    viewModel.updateSignatureGenerate(viewModel.keyStoreInfoState.copy(keyStoreAlisa = name))
                }
            }
            item {
                Spacer(Modifier.size(4.dp))
...
        OutlinedTextField(
            modifier = Modifier.padding(start = 8.dp, end = 8.dp, bottom = 3.dp).weight(1f),
            value = viewModel.keyStoreInfoState.keyStoreConfirmPassword,
            onValueChange = { keyStoreConfirmPassword ->
                viewModel.updateSignatureGenerate(viewModel.keyStoreInfoState.copy(keyStoreConfirmPassword = keyStoreConfirmPassword))
            },
            label = { Text("确认密码", style = MaterialTheme.typography.labelLarge) },
            isError = keyStoreConfirmPasswordError,
            singleLine = true,
            visualTransformation = PasswordVisualTransformation(),
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Password)
        )
    }
...
